--- a/assignments/womens_soccer.qmd
+++ b/assignments/womens_soccer.qmd
@@ -12,7 +12,7 @@ We'll want to start with 2025 match data, which is located in [this GitHub repos
 
 
 ```{r}
-matches_2025 <- read_csv("https://raw.githubusercontent.com/dwillis/NCAAWomensSoccerData/main/data/ncaa_womens_soccer_matchstats_2025.csv") |> mutate(diff = team_score - opponent_score, total_goals = goals + defensive_goals)
+matches_2025 <- read_csv("https://raw.githubusercontent.com/dwillis/NCAAWomensSoccerData/main/data/ncaa_womens_soccer_matchstats_2025.csv")
 ```
 
 Let's take a look at this data to see what it contains, using `head` and `glimpse`:
@@ -28,35 +28,76 @@ Now, onto the questions using aggregates, which means `group_by` and `summarize`
 
 ```{r}
 matches_2025 |> 
-  # filter(team == "Maryland Terrapins, Terps") |> 
+  filter(team == "Maryland Terrapins, Terps") |> 
   group_by(team) |> 
   summarize(
-    total_shots = sum(sh_att)
-    shots_on_goal = sum(so_g)
+    total_shots = sum(sh_att),
+    shots_on_goal = sum(so_g),
     pct_shots_on_goal = shots_on_goal / total_shots * 100
   )
 ```
 
+## The Terps took a total of 166 shots, but only 77 were on goal. That means that less than half (around 46.4%) of their total shots were on goal.
+
 2. What about the same shot stats from last season's first four games? You'll need to load the matches from 2024 - just change the season in the URL - and filter by date to find the first four games.
 
 ```{r}
-matches_2024 <- read_csv("https://raw.githubusercontent.com/dwillis/NCAAWomensSoccerData/main/data/ncaa_womens_soccer_matchstats_2024.csv") |> mutate(diff = team_score - opponent_score, total_goals = goals + defensive_goals)
+matches_2024 <- read_csv("https://raw.githubusercontent.com/dwillis/NCAAWomensSoccerData/main/data/ncaa_womens_soccer_matchstats_2024.csv")
 ```
-
+```{r}
+matches_2024 |> 
+  filter(team == "Maryland Terrapins, Terps", date <= "2024-08-25") |>
+  group_by(team) |>
+  summarize(
+    total_shots = sum(sh_att),
+    shots_on_goal = sum(so_g),
+    pct_shots_on_goal = shots_on_goal / total_shots * 100
+  )
+```
+## During the first four games of 2024, Terps WSOC took a total of 38 shots, 20 of which were on goal. That means about 52.6% of their shots were on goal to start last season. 
 
 3. Maryland started 2022 with 4 draws. Have any other teams had as many this season?
 
 ```{r}
+matches_2025 |>
+filter(outcome == "Draw", date <= "2025-09-01") |>
+group_by(team) |>
+summarize(
+  total = n()) |>
+arrange(desc(total))
 
 ```
 
+## Yes, we can see that by September 1st of 2025 (the same date the Terps achieved their fourth tie in 2022), that Drexel also had four ties, while Cal Poly had five.
 
 4. How many total corner kicks has Maryland had so far this season and how many have its opponents have? Calculate the difference between the two totals for every team using group_by, summarize and mutate, then filter to find Maryland's totals.
 
 ```{r}
-
-
+corners_2025 <- matches_2025 |>
+filter(date <= "2025-09-04") |>
+group_by(team) |>
+summarize(
+  team_corners = sum(corners),
+  opponent_corners = sum(defensive_corners),
+  corners_plus_minus = team_corners - opponent_corners) |>
+arrange(desc(corners_plus_minus))
 ```
+
+## The chart above shows every team ranked in order in terms of their plus/minus ratio on corner kicks. How did Maryland fare? 
+
+```{r}
+corners_2025 |>
+filter(team == "Maryland Terrapins, Terps")
+```
+## The Terps are just barely staying above water with a +1 differential. 
+
+5. What's the most interesting thing you've seen from these questions?
+
+Not only does the record show it, but the stats reflect it as well: Maryland is excellent in the beginning of the season against poor competition, but has consistently been amongst the worst teams in the Big Ten once conference play begins.
+
+
+### WOMEN'S SOCCER NOTEBOOK ASSIGNMENT ENDS HERE
+
 
 ```{r}
 matches_2025 <- read_csv("https://raw.githubusercontent.com/dwillis/NCAAWomensSoccerData/main/data/ncaa_womens_soccer_matchstats_2025.csv") |> mutate(diff = team_score - opponent_score, total_goals = goals + defensive_goals)
@@ -71,9 +112,6 @@ t-test
 t.test(matches_2024$total_goals, matches_2025$total_goals)
 ```
 
-
-
-5. What's the most interesting thing you've seen from these questions?
 
 ```{r}
 swac_teams <- c("Alabama A&M Bulldogs", "Alabama St. Lady Hornets", "Alcorn Lady Braves", "Ark.-Pine Bluff Lady Lions", "Grambling Lady Tigers", "Jackson St. Lady Tigers", "Mississippi Val. Devilettes", "Prairie View Lady Panthers", "Southern U. Lady Jaguars", "Texas Southern Lady Tigers")
