--- a/exercises/mutating/mutating.qmd
+++ b/exercises/mutating/mutating.qmd
@@ -1,4 +1,4 @@
-Andrew 
+Andrew Breza
 # Mutating data
 
 One of the most common data analysis techniques is to look at change over time. The most common way of comparing change over time is through percent change. The math behind calculating percent change is very simple, and you should know it off the top of your head. The easy way to remember it is:
@@ -52,7 +52,8 @@ head(attendance)
 
 What's one thing you notice about the data that might make year-over-year comparisons more complex?
 
-**Answer** DESCRIBE IT HERE
+**Answer** Two main things: first, conference realignment. We can see App State there in the head, but schools like Texas, Oklahoma, Oregon, and USC were impacted heavier from 2022-2024 with joining new conferences in the NIL era. The more important issue for us though is 2020, when most stadiums didn't allow spectators because of the coronavirus. That'll make year-over-year and change over time data harder to calculate. 
+
 
 The code to calculate percent change is pretty simple. Remember, with `summarize`, we used `n()` to count things. With `mutate`, we use very similar syntax to calculate a new value using other values in our dataset. So in this case, we're trying to do (new-old)/old, but we're doing it with fields. If we look at what we got when we did `head`, you'll see there's \`2024\` as the new data, and we'll use \`2023\` as the old data. So we're looking at one year. Then, to help us, we'll use arrange again to sort it, so we get the fastest growing school over one year.
 
@@ -78,7 +79,8 @@ attendance |> mutate(
 
 Who had the most growth in 2024 compared to the year before? What could account for that change? And what team(s) are the most interesting here?
 
-**Answer** YOUR ANSWER HERE
+**Answer** Once again, conference realignment is a big part of it. However, a bigger factor is that Ohio State, Indiana, and Texas all hosted an extra game in 2024 because of the modified CFP format. While SMU didn't host a game, they still made the CFP, bringing their fans out far more than in years past. 
+
 
 ## Back to women's soccer
 
@@ -93,16 +95,17 @@ matches_2025 <- read_csv("https://raw.githubusercontent.com/dwillis/NCAAWomensSo
 Previously we calculated totals for shots attempted and shots on goal for each time. Now let's do shots on goal and goals, using group_by() and summarize(), and then we'll use mutate to add a percentage to that and see what stands out.
 
 ```{r}
-matches_2025 |> 
-  group_by(REPLACE WITH GROUP_BY) |> 
+matches_2025 |>
+  filter(date <= "2025-09-09") |>
+  group_by(team) |> 
   summarise(
-    total_on_goal = REPLACE WITH FORMULA,
-    total_goals = REPLACE WITH FORMULA
-  ) |> 
-  mutate(percent = REPLACE WITH FORMULA) |> 
+    total_on_goal = sum(so_g),
+    total_goals = sum(goals)) |> 
+  mutate(percent = (total_goals/total_on_goal)*100) |> 
   arrange(desc(percent))
 ```
 
 What stands out to you here? Describe that below. Would you narrow down the results to certain teams based on the data? If so, do that in the code and explain why you did it below. Finally, what's the most interesting result to you that could be a story?
 
-**Answer** YOUR ANSWER HERE
+**Answer** The main thing that stands out to me is the discrepency between the number of shots on goal and goals amongst teams that are right next to each other based on percentage. Sure, Seton Hall is scoring at a slightly higher rate than Colorodo, but Colorado has 30 more shots on goal and 14 more goals. I'm going to calculate the mean shots on goal from this chart, then remake it using a similar figure. 
+
