--- a/assignments/volleyball.qmd
+++ b/assignments/volleyball.qmd
@@ -7,7 +7,7 @@ Working with volleyball match stats, you'll investigate two key questions: Do te
 You'll need to read the directions carefully, replace "_____" with the proper library, variable name or value as appropriate, and answer the questions at the end.
 
 ```{r}
-library(_______)
+library(tidyverse)
 ```
 
 ```{r}
@@ -19,7 +19,7 @@ First, let's get a sense of what we're working with by creating team season tota
 ```{r}
 team_totals <- teams |> 
   mutate(block_totals = block_solos + (block_assists * 0.5)) |> 
-  group_by(_____) |> 
+  group_by(team) |> 
   summarise(kills_avg = mean(kills),
             aces_avg = mean(aces),
             digs_avg = mean(digs),
@@ -28,7 +28,7 @@ team_totals <- teams |>
             errors_avg = mean(errors),
             score_diff_avg = mean(team_score - opponent_score),
             serve_err_avg = mean(s_err),
-            hit_pct_avg = mean(_____),
+            hit_pct_avg = mean(hit_pct),
             def_hit_pct_avg = mean(defensive_hit_pct),
             total_attacks_avg = mean(total_attacks)
   )
@@ -59,8 +59,9 @@ We'll test whether teams actually hit significantly different from this 25% targ
 
 ```{r}
 # Test for all Division I teams
-all_teams_test <- t.test(team_totals$hit_pct_avg, mu = _____)
+all_teams_test <- t.test(team_totals$hit_pct_avg, mu = 0.25)
 all_teams_test
+
 
 # Focus on Big Ten
 big10 <- c("Nebraska", "Iowa", "Minnesota", "Illinois", "Northwestern", "Wisconsin", 
@@ -68,7 +69,7 @@ big10 <- c("Nebraska", "Iowa", "Minnesota", "Illinois", "Northwestern", "Wiscons
            "Rutgers", "Maryland", "Southern California", "UCLA", "Washington", "Oregon")
 
 big10_totals <- team_totals |> filter(team %in% big10)
-big10_test <- t.test(big10_totals$_____, mu = 0.25)
+big10_test <- t.test(big10_totals$hit_pct_avg, mu = 0.25)
 big10_test
 ```
 
@@ -95,9 +96,15 @@ ggplot(comparison_data, aes(x = group, y = hit_pct_avg, fill = group)) +
 ### Questions:
 1. Are Big Ten teams performing significantly different from the 25% benchmark compared to all D-I teams? What does this suggest about competitive levels?
 
+Yes, they are significantly closer to the threshold compared to the rest of the teams in the country. It suggests that the Big Ten does in fact have some of the best volleyball programs in the country.
+
 2. How does the sample size difference between these two groups affect your confidence in the results?
 
+18 teams compared to 343 is not a reasonable comparison, so it doesn't give me much confidence whatsoever that the results are accurate in saying that the Big Ten is the best volleyball conference. The only way to make that claim would be to compare all or the big conferences.
+
 3. If you were writing a story about volleyball performance standards, how would you describe these findings to readers who aren't familiar with statistical testing?
+
+The average volleyball program in the United States isn't particularly close to the goal of a 25% hit rate. However, the average volleyball program in the Big Ten is relatively close to that threshold. 
 
 ## Exercise 2: Game-Level Performance Analysis
 
@@ -110,7 +117,7 @@ ggplot(comparison_data, aes(x = group, y = hit_pct_avg, fill = group)) +
 paired_data <- teams |>
   filter(!is.na(hit_pct) & !is.na(defensive_hit_pct)) |>
   select(team, opponent, date, hit_pct, defensive_hit_pct) |>
-  mutate(difference = _____ - _____)
+  mutate(difference = hit_pct - defensive_hit_pct)
 
 # Summary statistics
 cat("Mean team hit %:", round(mean(paired_data$hit_pct), 4), "\n")
@@ -154,13 +161,23 @@ Now for our statistical test:
 paired_test <- t.test(paired_data$hit_pct, paired_data$defensive_hit_pct, paired = _____)
 paired_test
 ```
+## Note: I'm lost on the fill in the blank above. 
+
 
 ### Questions:
 1. What does the statistical test tell us about whether teams consistently outperform or underperform against their opponents' typical defensive standards?
 
+The statistical test tells us that teams do not consistently outperform or underperform against their opponent's defensive standards due to a complete lack of correlation.
+
 2. Looking at the visualizations, what patterns do you notice? Are there outliers that might represent particularly dominant offensive performances or defensive breakdowns?
+
+The vast majority of the difference between hit % and defensive hit % in each match are near zero, meaning that for the most part, teams play each other pretty evenly. However, yes, there are outliers that signify dominant offensive performances and defensive breakdowns. 
 
 3. If defensive hitting percentage is supposed to measure defensive quality, what do these results suggest about using it as a predictor of game outcomes?
 
+These results suggest that defensive hitting percentage is an accurate measure of defensive quality because the results are so close. 
+
 4. From a strategic perspective, what questions would you want to explore next based on these findings? What additional data might help explain the patterns you're seeing?
+
+I'd like to next explore it from more of an offensive angle. How significant are the number of kills an offense gets? Does having significantly more attacks actually pay positive dividends?
 
